# Qt-ffmpeg

./: .editorconfig  .gitignore  CMakeLists.txt  Decode.cpp  Decode.h  LoadFileQss.h  Loading.cpp  Loading.h  README.txt  base.cpp  base.h  cloudmusic.cpp  cloudmusic.h  cloudmusic.ui  config.cpp  config.h  desktoplyrics.cpp  desktoplyrics.h  desktoplyrics.ui  discovrmusic.cpp  discovrmusic.h  loadJson.cpp  loadJson.h  local_and_download.cpp  local_and_download.h  local_and_download.ui  login.cpp  login.h  login.ui  lyric.cpp  lyric.h  lyric.ui  main.cpp  music.cpp  music.h  music.ui  networkutil.cpp  networkutil.h  personform.cpp  personform.h  (+32 more)
NewMusicSudi/: CMakeLists.txt  newmusicsudi.cpp  newmusicsudi.h  newmusicsudi.ui
RecommendPlaylist/: CMakeLists.txt  recommendplaylist.cpp  recommendplaylist.h  recommendplaylist.ui
images/NewMusicSudi/: newmusicsudi.cpp  newmusicsudi.h  newmusicsudi.ui
photowall/: CMakeLists.txt  photowall.cpp  photowall.h  photowall.ui  picturebutton.cpp  picturebutton.h  pictureview.cpp  pictureview.h
qss/: setImages.css
skin/: black.css  blue.css  gold.css  green.css  pink.css  red.css
